<resources>
    <string name="app_name">JokenPokemon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="criar_conta">Ainda não tem conta? Crie uma</string>
    <string name="menu">Menu</string>
    <string name="jogar">Jogar</string>
    <string name="ranking">Ranking</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="desenvolvimento_app">Disciplina de Android da MBA de Desenvolvimento Mobile da FIAP.
                                        Daniel Silva/Jafer/Leandro</string>
    <string name="app_versao">v1.0.0</string>
    <string name="adicionar_conta">Criar conta</string>
    <string name="pontos">Pontos</string>
    <string name="game_over">Game Over</string>
    <string name="jogador">Jogador</string>

</resources>
